Bugfix dans l'éditeur de texte (div invisible qui empêche la saisie).

--- a/css/extra/framacolibri.css
+++ b/css/extra/framacolibri.css
@@ -17,3 +17,7 @@
     display: block !important;
     visibility: visible !important;
 }
+
+#draft-status {
+    height: 25px;
+}
